--- a/components/common/Frequentlyasked.module.css
+++ b/components/common/Frequentlyasked.module.css
@@ -90,7 +90,7 @@
 }
 
 @media only screen and (max-width: 1020px){
-    .faqAnswers {display: flex; flex-direction: column;}
+    .faqAnswers {display: flex; flex-direction: column; width: 97%;}
     .faqTitle {line-height: 52px; font-size: 48px;}
 }
 
